@@ -1,3 +1,8 @@
+05-09-2005 Qball <Qball@qballcow.nl>
+	* src/playlist3.c:		Fixed scroll to bug.
+	* src/playlist3.c:		added scroll to in detach playlist.
+	* src/playlist3.c:		activating row in dp play's song.
+
 04-09-2005 Qball <Qball@qballcow.nl>
 	* src/playlist3.c:		Show folders in right pane view.
 	* src/playlist3.c:		First attemped at detachable playlist window.
